--- a/src/backend/api.portal.jenn/appsettings.Development.json
+++ b/src/backend/api.portal.jenn/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "DataBase": {
     "Connection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=devjenn;Pwd=w123;"
+    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
 
   },
   "Cors": {
