ajuste web config

--- a/src/backend/api.portal.jenn/web.config
+++ b/src/backend/api.portal.jenn/web.config
@@ -3,9 +3,27 @@
   <location path="." inheritInChildApplications="false">
     <system.webServer>
       <handlers>
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+        <add name="PHP-FastCGI-sub7.3" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="C:\php7.3\php-cgi_8.exe" resourceType="File" />
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath=".\api.portal.jenn.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+      <aspNetCore processPath="dotnet" arguments=".\api.portal.jenn.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+    </system.webServer>
+  </location>
+  <location path="" overrideMode="Inherit">
+    <system.webServer>
+      <urlCompression doDynamicCompression="false" />
+      <defaultDocument enabled="true">
+        <files>
+          <clear />
+          <add value="index.htm" />
+          <add value="index.html" />
+          <add value="index.php" />
+          <add value="index.asp" />
+          <add value="default.asp" />
+          <add value="index.aspx" />
+          <add value="default.aspx" />
+        </files>
+      </defaultDocument>
     </system.webServer>
   </location>
 </configuration>
