--- a/src/backend/api.portal.jenn/web.config
+++ b/src/backend/api.portal.jenn/web.config
@@ -4,7 +4,7 @@
     <system.webServer>
       <handlers>
         <add name="PHP-FastCGI-sub7.3" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="C:\php7.3\php-cgi_8.exe" resourceType="File" />
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" arguments=".\api.portal.jenn.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
     </system.webServer>
@@ -27,4 +27,4 @@
     </system.webServer>
   </location>
 </configuration>
-<!--ProjectGuid: ca6eb922-04e8-46ce-aad1-f6a2fe58a1ac-->
+<!--Projectint: ca6eb922-04e8-46ce-aad1-f6a2fe58a1ac-->
