Ajuste Web Config

--- a/src/backend/api.portal.jenn/web.config
+++ b/src/backend/api.portal.jenn/web.config
@@ -27,4 +27,4 @@
     </system.webServer>
   </location>
 </configuration>
-<!--Projectint: ca6eb922-04e8-46ce-aad1-f6a2fe58a1ac-->
+<!--ProjectGuid: ca6eb922-04e8-46ce-aad1-f6a2fe58a1ac-->
