--- a/src/backend/api.portal.jenn/appsettings.Development.json
+++ b/src/backend/api.portal.jenn/appsettings.Development.json
@@ -6,10 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BancoPrincipal": "MySQL",
   "DataBase": {
-    "Connection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
-
+    "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
+    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql",
+    "MongoDB": ""
   },
   "Cors": {
     "AllowOrigins": [ "*", "*" ]
