--- a/src/backend/api.portal.jenn/appsettings.json
+++ b/src/backend/api.portal.jenn/appsettings.json
@@ -6,16 +6,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BancoPrincipal": "MySQL",
   "DataBase": {
-    "Connection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
-
+    "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
+    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
   },
+  
   "Cors": {
     "AllowOrigins": [ "*", "*" ]
   },
   "JwtConfig": {
+   
     "Secret": "fedaf7d8863b48e197b9287d492b708e",
     "expirationInMinutes": 60
   }
 }
+
+    //, "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
