--- a/src/backend/api.portal.jenn/appsettings.json
+++ b/src/backend/api.portal.jenn/appsettings.json
@@ -9,7 +9,8 @@
   "BancoPrincipal": "MySQL",
   "DataBase": {
     "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
+    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
+    //"MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
   },
   
   "Cors": {
@@ -21,5 +22,3 @@
     "expirationInMinutes": 60
   }
 }
-
-    //, "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
