--- a/src/backend/api.portal.jenn/appsettings.Development.json
+++ b/src/backend/api.portal.jenn/appsettings.Development.json
@@ -9,13 +9,15 @@
   "BancoPrincipal": "MySQL",
   "DataBase": {
     "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql",
-    "MongoDB": ""
+    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
+    //"MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
   },
+
   "Cors": {
     "AllowOrigins": [ "*", "*" ]
   },
   "JwtConfig": {
+
     "Secret": "fedaf7d8863b48e197b9287d492b708e",
     "expirationInMinutes": 60
   }
