--- a/src/frontend/ui.portal.jenn/ui.portal.jenn.csproj
+++ b/src/frontend/ui.portal.jenn/ui.portal.jenn.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\js\bairros.js" />
+    <None Include="wwwroot\js\general.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
