--- a/src/frontend/ui.portal.jenn/appsettings.json
+++ b/src/frontend/ui.portal.jenn/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "urlBaseApi": "https://localhost:44323/"
+  "urlBaseApi": "http://api.examesemcasa.com.br/"
 }
