--- a/src/backend/api.portal.jenn/api.portal.jenn.csproj
+++ b/src/backend/api.portal.jenn/api.portal.jenn.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>616017e7-13f9-4330-9cfc-e829f19ee43e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
