--- a/src/backend/api.portal.jenn/appsettings.json
+++ b/src/backend/api.portal.jenn/appsettings.json
@@ -12,12 +12,21 @@
     "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
     //"MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
   },
-  
+
   "Cors": {
     "AllowOrigins": [ "*", "*" ]
   },
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryPort": "587",
+    "UsernameEmail": "josecarlosmacoratti@gmail.com",
+    "UsernamePassword": "*********",
+    "FromEmail": "fromEmail",
+    "ToEmail": "macoratti@yahoo.com",
+    "CcEmail": "macoratti@macoratti.net"
+  },
   "JwtConfig": {
-   
+
     "Secret": "fedaf7d8863b48e197b9287d492b708e",
     "expirationInMinutes": 60
   }
