--- a/src/backend/api.portal.jenn/appsettings.Development.json
+++ b/src/backend/api.portal.jenn/appsettings.Development.json
@@ -10,11 +10,20 @@
   "DataBase": {
     "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
     "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
-//    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
+    //    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
   },
 
   "Cors": {
     "AllowOrigins": [ "*", "*" ]
+  },
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.live.com",
+    "PrimaryPort": "587",
+    "UsernameEmail": "rodolfohco@hotmail.com",
+    "UsernamePassword": "rod.her260219829",
+    "FromEmail": "fromEmail",
+    "ToEmail": "rodolfohco@gmail.com",
+    "CcEmail": "rodolfo.oliveira@pixeon.com"
   },
   "JwtConfig": {
 
