--- a/src/frontend/ui.portal.jenn/web.config
+++ b/src/frontend/ui.portal.jenn/web.config
@@ -4,7 +4,7 @@
     <system.webServer>
       <handlers>
         <add name="PHP-FastCGI-sub7.3" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="C:\php7.3\php-cgi_8.exe" resourceType="File" />
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" arguments=".\ui.portal.jenn.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
     </system.webServer>
