--- a/src/backend/api.portal.jenn/appsettings.Development.json
+++ b/src/backend/api.portal.jenn/appsettings.Development.json
@@ -9,21 +9,21 @@
   "BancoPrincipal": "MySQL",
   "DataBase": {
     "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
-    //    "MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
+    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa01;Uid=examesemcasa01;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
+    //"MySqlConnection": "Server=127.0.0.1;Database=DBJenn;Uid=root;Pwd=mysql"
   },
 
   "Cors": {
     "AllowOrigins": [ "*", "*" ]
   },
   "EmailSettings": {
-    "PrimaryDomain": "smtp.live.com",
+    "PrimaryDomain": "smtp.gmail.com",
     "PrimaryPort": "587",
-    "UsernameEmail": "rodolfohco@hotmail.com",
-    "UsernamePassword": "rod.her260219829",
+    "UsernameEmail": "josecarlosmacoratti@gmail.com",
+    "UsernamePassword": "*********",
     "FromEmail": "fromEmail",
-    "ToEmail": "rodolfohco@gmail.com",
-    "CcEmail": "rodolfo.oliveira@pixeon.com"
+    "ToEmail": "macoratti@yahoo.com",
+    "CcEmail": "macoratti@macoratti.net"
   },
   "JwtConfig": {
 
