Ajuste Data Migration

--- a/src/backend/api.portal.jenn/api.portal.jenn.csproj
+++ b/src/backend/api.portal.jenn/api.portal.jenn.csproj
@@ -36,7 +36,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Contexto\" />
     <Folder Include="Middleware\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\database.portal.jenn\database.portal.jenn.csproj" />
   </ItemGroup>
 
 
