--- a/src/frontend-crud/crud.ui.portal.jenn/appsettings.json
+++ b/src/frontend-crud/crud.ui.portal.jenn/appsettings.json
@@ -9,8 +9,7 @@
   "BancoPrincipal": "MySQL",
   "DataBase": {
     "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa01;Uid=examesemcasa01;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
-
+    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
   },
   "AllowedHosts": "*",
   "urlBaseApi": "http://api.examesemcasa.com.br/"
