--- a/src/backend/src/api.portal.jenn/web.config
+++ b/src/backend/src/api.portal.jenn/web.config
@@ -1,30 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
       <handlers>
-                <add name="PHP-FastCGI-sub7.3" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="C:\php7.3\php-cgi_8.exe" resourceType="File" />
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+        <add name="PHP-FastCGI-sub7.3" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="C:\php7.3\php-cgi_8.exe" resourceType="File" />
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" arguments=".\api.portal.jenn.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
     </system.webServer>
   </location>
-    <location path="" overrideMode="Inherit">
-        <system.webServer>
-            <urlCompression doDynamicCompression="false" />
-            <defaultDocument enabled="true">
-                <files>
-				<clear />
-                    <add value="index.htm" />
-                    <add value="index.html" />
-                    <add value="index.php" />
-                    <add value="index.asp" />
-                    <add value="default.asp" />
-                    <add value="index.aspx" />
-                    <add value="default.aspx" />
-                </files>
-            </defaultDocument>
-        </system.webServer>
-    </location>
+  <location path="" overrideMode="Inherit">
+    <system.webServer>
+      <urlCompression doDynamicCompression="false" />
+      <defaultDocument enabled="true">
+        <files>
+          <clear />
+          <add value="index.htm" />
+          <add value="index.html" />
+          <add value="index.php" />
+          <add value="index.asp" />
+          <add value="default.asp" />
+          <add value="index.aspx" />
+          <add value="default.aspx" />
+        </files>
+      </defaultDocument>
+    </system.webServer>
+  </location>
 </configuration>
 <!--ProjectGuid: ca6eb922-04e8-46ce-aad1-f6a2fe58a1ac-->
