--- a/src/backend/src/api.portal.jenn/appsettings.json
+++ b/src/backend/src/api.portal.jenn/appsettings.json
@@ -17,13 +17,13 @@
     "AllowOrigins": [ "*", "*" ]
   },
   "EmailSettings": {
-    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryDomain": "smtplw.com.br",
     "PrimaryPort": "587",
-    "UsernameEmail": "josecarlosmacoratti@gmail.com",
-    "UsernamePassword": "*********",
+    "UsernameEmail": "relacionamento@jenn.com.br",
+    "UsernamePassword": "K!ndoU280435",
     "FromEmail": "fromEmail",
-    "ToEmail": "macoratti@yahoo.com",
-    "CcEmail": "macoratti@macoratti.net"
+    "ToEmail": "maria@jenn.com.br",
+    "CcEmail": "rodolfohco@hotmail.com"
   },
   "JwtConfig": {
 
