--- a/src/frontend-crud/crud.ui.portal.jenn/appsettings.Development.json
+++ b/src/frontend-crud/crud.ui.portal.jenn/appsettings.Development.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BancoPrincipal": "MySQL",
+  "DataBase": {
+    "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
+    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
+  },
   "AllowedHosts": "*",
   "urlBaseApi": "http://api.examesemcasa.com.br/"
   //"urlBaseApi": "https://localhost:32768/"
