Ajuste Back Emd

--- a/src/backend/src/api.portal.jenn/appsettings.Development.json
+++ b/src/backend/src/api.portal.jenn/appsettings.Development.json
@@ -17,12 +17,12 @@
     "AllowOrigins": [ "*", "*" ]
   },
   "EmailSettings": {
-    "PrimaryDomain": "smtplw.com.br",
+    "PrimaryDomain": "smtp.live.com",
     "PrimaryPort": "587",
-    "UsernameEmail": "relacionamento@jenn.com.br",
-    "UsernamePassword": "K!ndoU280435",
+    "UsernameEmail": "rodolfohco@hotmail.com",
+    "UsernamePassword": "rod.her260219829",
     "FromEmail": "fromEmail",
-    "ToEmail": "maria@jenn.com.br",
+    "ToEmail": "yohan.laus@kinghost.com.br",
     "CcEmail": "rodolfohco@hotmail.com"
   },
   "JwtConfig": {
