--- a/src/frontend/ui.portal.jenn/appsettings.Development.json
+++ b/src/frontend/ui.portal.jenn/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  //"urlBaseApi": "http://api.examesemcasa.com.br/"
-  "urlBaseApi": "https://localhost:32770/"
+  "urlBaseApi": "http://api.examesemcasa.com.br/"
+  //"urlBaseApi": "https://localhost:32770/"
 }
