--- a/src/frontend/ui.portal.jenn/appsettings.json
+++ b/src/frontend/ui.portal.jenn/appsettings.json
@@ -1,12 +1,12 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-    "urlBaseApi": "http://api.examesemcasa.com.br/"
-    //"urlBaseApi": "https://localhost:44323/"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "urlBaseApi": "http://api.examesemcasa.com.br/",
+  "urlImagem": "http://www.examesemcasa.com.br/logos/{0}"
 }
