--- a/src/frontend-crud/crud.ui.portal.jenn/appsettings.json
+++ b/src/frontend-crud/crud.ui.portal.jenn/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "BancoPrincipal": "MySQL",
-  "DataBase": {
-    "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
-    "MySqlConnection": "Server=mysql.examesemcasa.com.br;Database=examesemcasa;Uid=examesemcasa;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
-  },
+    "DataBase": {
+        "SQLConnection": "Data Source=(local);Initial Catalog=DBJenn;Integrated Security=True;",
+        "MySqlConnection": "Server=mysql.free.kinghost.net;Database=free;Uid=free;Pwd=K3LLaxMmQD9qJd7jYsZutvUbT6DyVw;"
+    },
   "AllowedHosts": "*",
   "urlBaseApi": "http://api.examesemcasa.com.br/"
   //"urlBaseApi": "https://localhost:32768/"
